# rhubarb-lip-sync

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml  debian-package.yml  linux-build.yml
debian/: changelog  control  copyright  rhubarb-lip-sync.manpages  rhubarb.1  rules
debian/patches/: audio-performance-optimizations.patch  resource-directory.patch  series
rhubarb/: CMakeLists.txt
